Perus html juttu

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="fahrenheit">
         <input type="number" placeholder="Fahrenheit"
     </div>
-    <div id="Kelvin">
+    <div id="kelvin">
         <input type="number" placeholder="Kelvin"
     </div>
 
