--- a/index.html
+++ b/index.html
@@ -16,27 +16,19 @@
         <p>Lämpötilamuunnin</p>
     </div>
 
-    <div class="links">
-        <a href="index.html">Etusivu</a>
-        <a href="projektit.html">Projektit</a>
-        <a href="linkit.html">Linkit</a>
-    </div>
 
     <div class="converter">
         <div id="celsius">
-            <input type="number" placeholder="Celsius"
+            <input type="number" placeholder="Celsius" step="0.50">
         </div>
         <div id="fahrenheit">
-            <input type="number" placeholder="Fahrenheit"
+            <input type="number" placeholder="Fahrenheit" step="0.50">
         </div>
         <div id="kelvin">
-            <input type="number" placeholder="Kelvin"
+            <input type="number" placeholder="Kelvin" step="0.50">
         </div>
-        <div>
-        <button type="button">Click Me!</button>
-        </div>
-        <div>
-        <button type="button">Click Me!</button> 
+        <div id="tyhjenna">
+        <button type="button" id="tyhjenna">Tyhjennä</button> 
         </div>
     </div>
 
