--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
         <p>Lämpötilamuunnin</p>
     </div>
 
+    <div class="links">
+        <a href="index.html">Etusivu</a>
+        <a href="projektit.html">Projektit</a>
+        <a href="linkit.html">Linkit</a>
+    </div>
 
     <div class="converter">
         <div id="celsius">
